Partial fix for bad collapse mechanic

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -762,14 +762,14 @@ div[datepicker] {
 
 .infobox-adgroup {
     .infobox-setting-label {
-        width: 34%;
+        width: 120px;
         max-width: 120px;
     }
 }
 
 .infobox-account {
     .infobox-setting-label {
-        width: 30%;
+        width: 120px;
         max-width: 120px;
     }
 
@@ -788,7 +788,7 @@ div[datepicker] {
 
 .infobox-campaign {
     .infobox-setting-label {
-        width: 30%;
+        width: 125px;
         max-width: 125px;
     }
 }
@@ -894,12 +894,12 @@ div[datepicker] {
     vertical-align: top;
     color: #454545;
     font-weight: normal;
+    margin-right: 5px;
 }
 
 .infobox-setting-value-comment {
-    display: inline;
+    display: inline-block;
     vertical-align: top;
-    margin-left: 5px;
     color: @infobox-gray;
 }
 
